force-app/main/default/objects/Sales_Target__c/fields/Logged_In_User_Same__c.field-meta.xml
<CustomField>
    <fullName>Logged_In_User_Same__c</fullName>
    <formula>IF(  User__c = $User.Id , 1 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged In User Same</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>