force-app/main/default/objects/Sales_Target__c/fields/Target_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Target_Remaining__c</fullName>
    <formula>Target__c -  Target_Achieved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>