force-app/main/default/objects/Sales_Target__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Target__c</columns>
    <columns>Target_Achieved__c</columns>
    <columns>Target_Remaining__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>